--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
      <title>Demo webpage</title>
    </head>
   <body>
-     <a href="css_demo.html">This is a link to the demo file</a>
     <h1>Demo for my HCI class</h1>
+    <a href="css_demo.html">This is a link to the demo file</a>
+     <p><a href="font-sample.html"> This is a link to the font-sample file </a></p>
     <p>Hi! This is a sample web page that links github to heroku for pure Awesomeness</p>
     <h4>Jason Lum</h4>
   </body>
