--- a/font-sample.html
+++ b/font-sample.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html> 
+<html>
+    <head>
+      <title>Font Sample</title>
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Merriweather:wght@300;400&family=Mukta&display=swap" rel="stylesheet">
+      <style>
+        .lede{
+          font-family: 'Krona One', sans-serif;
+         }
+        .copy{
+        font-family: 'Merriweather', serif;
+        }
+        .copier{
+        font-family: 'Mukta', sans-serif;
+        }
+      </style>
+  </head>
+  <body>
+    <p class="lede">Hi
+    </p>
+    <p class="copy"> Sup
+    </p>
+    <p class="copier"> Wow
+    </p>
+  </body>
+</html>
