--- a/font-sample.html
+++ b/font-sample.html
@@ -7,6 +7,7 @@
       <style>
         .lede{
           font-family: 'Krona One', sans-serif;
+          font-size:300%;
          }
         .copy{
         font-family: 'Merriweather', serif;
@@ -17,7 +18,7 @@
       </style>
   </head>
   <body>
-    <p class="lede">Hi
+    <p class="lede">It was a dark and stormy night...
     </p>
     <p class="copy"> Sup
     </p>
