--- a/font-sample.html
+++ b/font-sample.html
@@ -11,6 +11,7 @@
          }
         .copy{
         font-family: 'Merriweather', serif;
+            font-size:150%;
         }
         .copier{
         font-family: 'Mukta', sans-serif;
@@ -20,9 +21,9 @@
   <body>
     <p class="lede">It was a dark and stormy night...
     </p>
-    <p class="copy"> Sup
+    <p class="copy"> Thunder rumble throughout the eerie sky as Jason didn't know where to go with this story. 
     </p>
-    <p class="copier"> Wow
+    <p class="copier"> It was a story that would never be finished. 
     </p>
   </body>
 </html>
