--- a/font-sample.html
+++ b/font-sample.html
@@ -21,7 +21,7 @@
   <body>
     <p class="lede">It was a dark and stormy night...
     </p>
-    <p class="copy"> Thunder rumble throughout the eerie sky as Jason didn't know where to go with this story. 
+    <p class="copy"> Thunder rumbled throughout the eerie sky as Jason didn't know where to go with this story. 
     </p>
     <p class="copier"> It was a story that would never be finished. 
     </p>
