--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
    </head>
   <body>
     <h1>Demo for my HCI class</h1>
-    <a href="css_demo.html">This is a link to the demo file</a>
-    <a href="bootstrap-sample.html">This is a link to the bootstrap file</a>
+     <a href="css_demo.html">This is a link to the demo file</a>
      <p><a href="font-sample.html"> This is a link to the font-sample file </a></p>
+     <p><a href="bootstrap-sample.html">This is a link to the bootstrap file</a></p>
     <p>Hi! This is a sample web page that links github to heroku for pure Awesomeness</p>
     <h4>Jason Lum</h4>
   </body>
