--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -1,5 +1,10 @@
 <!doctype html>
 <html lang="en">
+  <style>
+    div.col{
+      border:2px solid blue;
+    }
+  </style>
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -8,11 +13,18 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Bootstrap Page</title>
   </head>
   <body>
     <h1>Hi friends!</h1>
-
+    <div class="container">
+      <div class="row">
+          <div class="col">
+            Hello
+        </div>
+        <div class="col">
+          Tickle
+        </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
