--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -25,6 +25,14 @@
         <div class="col">
           Tickle
         </div>
+         <div class="container-fluid">
+      <div class="row">
+          <div class="col">
+            West Coast
+        </div>
+        <div class="col">
+          East Coast
+        </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
