--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <style>
     div.col{
-      border:2px solid blue;
+      border:2px solid black;
     }
   </style>
   <head>
@@ -43,5 +43,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
     -->
+        
+     <div class="col-md-3">
+       <img class="img-fluid" src="logo.png" alt="logo"
+     </div>
   </body>
 </html>
