--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
-  <style>
-    div.col{
-      border:2px solid black;
-    }
-  </style>
   <head>
+    <style>
+      div.col{
+        border:2px solid black;
+    }
+    </style>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,20 +19,24 @@
     <h1>Hi friends!</h1>
     <div class="container">
       <div class="row">
-          <div class="col">
+        <div class="col">
             Hello
         </div>
         <div class="col">
           Tickle
         </div>
-         <div class="container-fluid">
-      <div class="row">
+      </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
           <div class="col">
             West Coast
+          </div>
+          <div class="col">
+            East Coast
+          </div>
         </div>
-        <div class="col">
-          East Coast
-        </div>
+      </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -45,7 +49,7 @@
     -->
         
      <div class="col-md-3">
-       <img class="img-fluid" src="logo.png" alt="logo"
+       <img class="img-fluid" src="logo.png" alt="logo">
      </div>
   </body>
 </html>
