--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -4,7 +4,7 @@
     <style>
       div.col{
         border:2px solid black;
-    }
+      }
     </style>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -19,24 +19,18 @@
     <h1>Hi friends!</h1>
     <div class="container">
       <div class="row">
-        <div class="col">
-            Hello
+        <div class="col-sm">
+          One of three columns
         </div>
-        <div class="col">
-          Tickle
-        </div>
+      <div class="col-sm">
+        One of three columns
       </div>
+    <div class="col-sm">
+      One of three columns
     </div>
-    <div class="container-fluid">
-        <div class="row">
-          <div class="col">
-            West Coast
-          </div>
-          <div class="col">
-            East Coast
-          </div>
-        </div>
-      </div>
+  </div>
+</div>
+    
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
