--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
      <p><a href="bootstrap-sample.html">This is a link to the bootstrap file</a></p>
     <p>Hi! This is a sample web page that links github to heroku for pure Awesomeness</p>
    <!--comment-->
+   <p>Awesome Possum</p>
     <h4>Jason Lum</h4>
   </body>
 </html>
