--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -56,7 +56,7 @@
 </div>
         
      <div class="col-md-3">
-       <img class="img-fluid" src="logo.png" alt="logo">
+       <img class="img-fluid" src="nature.jpg" alt="Nature">
      </div>
   </body>
 </html>
