--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -24,15 +24,15 @@
     <div class="container">
   <div class="row">
     <div class="col">
-      Diamond
+      <strong>Diamond</strong>
     </div>
     <div class="col">
-      Head
+      <strong>Head</strong>
     </div>
   </div>
   <div class="row">
     <div class="col">
-      Scenery
+      <button type="button" class="btn btn-primary">Scenery</button>
     </div>
     <div class="col">
       Beach
