--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -35,7 +35,7 @@
       <button type="button" class="btn btn-primary">Scenery</button>
     </div>
     <div class="col">
-      Beach
+      <button type="button" class="btn btn-primary btn-lg">Beach</button>
     </div>
     <div class="col">
       Ocean
