--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -16,7 +16,7 @@
     <title>Bootstrap Page</title>
   </head>
   <body>
-    <h1>Hi friends!</h1>
+    <h1>Welcome to Diamond Head</h1>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
@@ -27,7 +27,7 @@
       <strong>Diamond</strong>
     </div>
     <div class="col">
-      <strong>Head</strong>
+      <p style="font-size:30px"><strong>Head</strong></p>
     </div>
   </div>
   <div class="row">
