--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -24,10 +24,14 @@
     <div class="container">
   <div class="row">
     <div class="col">
-      <strong>Diamond</strong>
+      <p style="font-size:30px">
+        <strong>Diamond</strong>
+      </p>
     </div>
     <div class="col">
-      <p style="font-size:30px"><strong>Head</strong></p>
+      <p style="font-size:30px">
+        <strong>Head</strong>
+      </p>
     </div>
   </div>
   <div class="row">
@@ -35,10 +39,10 @@
       <button type="button" class="btn btn-primary">Scenery</button>
     </div>
     <div class="col">
-      <button type="button" class="btn btn-primary btn-lg">Beach</button>
+      <button type="button" class="btn btn-success">Beach</button>
     </div>
     <div class="col">
-      Ocean
+      <button type="button" class="btn btn-info">Ocean</button>
     </div>
   </div>
 </div>
