--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -4,8 +4,13 @@
     <style>
       div.col{
         border:2px solid black;
+      img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
       }
     </style>
+    
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
